<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="对话框集合"
            android:textColor="#f00"
            android:textSize="18sp" />

        <!-- 普通提示对话框 -->
        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_1" />

        <!-- 确认取消对话框 -->
        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_2" />

        <!-- 列表对话框 -->
        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_3" />

        <!-- 列表单选对话框 -->
        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_4" />

        <!-- 列表多选对话框 -->
        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_5" />

        <!-- 自定义对话框 - 登陆 -->
        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_6" />

        <!-- 进度条对话框 -->
        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_7" />

        <!-- 日期选择对话框 -->
        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_8" />

        <!-- 时间选择对话框 -->
        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="DialogFragment"
            android:textColor="#f00"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogfragment_content"
            android:textSize="16sp"
            android:padding="5dp"
            android:background="#1000"
            />

        <!-- dialogfragment对话框 -->
        <Button
            android:id="@+id/btn_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_10" />

        <!-- dialogfragment对话框-带屏幕适配 -->
        <Button
            android:id="@+id/btn_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_11" />
        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

    </LinearLayout>


</ScrollView>

